# nisupply

./: .gitignore  LICENSE  README.md  nisupply.py  pyproject.toml
docs/: example_script.py
nisupply/: bids.py  io.py  structure.py  utils.py
testing/: test_nisupply.py
